tests/baselines/reference/DeclarationErrorsNoEmitOnError.errors.txt
tests/cases/compiler/DeclarationErrorsNoEmitOnError.ts(3,8): error TS4033: Property 'f' of exported interface has or is using private name 'T'.


==== tests/cases/compiler/DeclarationErrorsNoEmitOnError.ts (1 errors) ====
    type T = { x : number }
    export interface I {
        f: T;   
           ~
!!! error TS4033: Property 'f' of exported interface has or is using private name 'T'.
    }